--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>teg-frontend</title>
-    <link rel=stylesheet href=/static/css/bootstrap.css>
+    <link rel=stylesheet href="/static/css/bootstrap.css">
     <link href="/static/css/iconfont/material-icons.css" rel="stylesheet">
     <!--Numeric js-->
     <script src="/static/js/numeric.min.js"></script> 
