--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>teg-frontend</title>
     <link rel=stylesheet href="/static/css/bootstrap.css">
     <link href="/static/css/iconfont/material-icons.css" rel="stylesheet">
+    <link href="/static/css/all.css" rel="stylesheet">
     <!--Numeric js-->
     <script src="/static/js/numeric.min.js"></script> 
     <!--jQuery-->
