--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>teg-frontend</title>
+    <title>UC RANKING</title>
     <link rel=stylesheet href="/static/css/bootstrap.css">
     <link href="/static/css/iconfont/material-icons.css" rel="stylesheet">
     <link href="/static/css/all.css" rel="stylesheet">
