Agregando icono de la universidad y detalles con el login

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>UC RANKING</title>
+
+    <link rel="shortcut icon" href="/static/favicon.png" type="image/x-icon">
+    <link rel="icon" href="/static/favicon.png" type="image/x-icon">
+    
     <link rel=stylesheet href="/static/css/bootstrap.css">
     <link href="/static/css/iconfont/material-icons.css" rel="stylesheet">
     <link href="/static/css/all.css" rel="stylesheet">
